--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .vscode/
 .htaccess
 .DS_Store
-/node_modules
+/node_modules/
+./client/node_modules/
+./server/node_modules/
 /dist
 /.idea
 package-lock.json
