--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-client": "^2.2.5",
     "apollo-link-batch-http": "^1.2.3",
     "apollo-link-context": "^1.0.7",
     "apollo-link-http": "^1.5.1",
     "apollo-mocknetworkinterface": "^2.0.0",
+    "bootstrap": "^4.3.1",
     "graphql-tag": "^2.10.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.5",
